# BDUI

./: .gitignore  Cargo.toml  plan.md  solution.md
App/BDUI/BDUI/: AppDelegate.swift  SceneDelegate.swift
App/BDUI/BDUI.xcodeproj/: project.pbxproj
App/BDUI/BDUI/Renderer/: BDUIAction.swift  BDUIActionDispatching.swift  BDUIComponentView.swift  BDUIRenderer.swift
App/BDUI/BDUI/Router/: AppRouter.swift
App/BDUI/BDUITests/: BDUIScreenPresenterTests.swift  BDUITests.swift
App/BDUI/BDUIUITests/: BDUIUITests.swift  BDUIUITestsLaunchTests.swift
diagrams/: 0_layers.mmd  architecture.mmd  architecture_wide.mmd  bdui_diagrams.md  caching_mechanism.mmd  caching_mechanism_wide.mmd
docs/server/: 01-overview.md  02-bdui-protocol.md  03-layers.md  04-request-lifecycle.md  05-extensibility.md  06-solid.md  README.md
iOS/: Package.swift
iOS/Sources/BDUIClient/: BDUICache.swift  BDUIClient.swift  BDUIModels.swift  BDUIProtocol.swift  BDUIScreenLoader.swift
iOS/Tests/BDUIClientTests/: BDUIClientNetworkTests.swift  BDUIClientTests.swift  BDUIProtocolTests.swift
src/: main.rs
src/application/: mod.rs  screen_service.rs
src/domain/: hashing.rs  mod.rs  models.rs  protocol.rs  screen.rs  ui.rs
src/infrastructure/: hashing.rs  mod.rs  screen_registry.rs
src/infrastructure/screens/: catalog.rs  home.rs  mod.rs  product.rs  profile.rs  settings.rs
src/infrastructure/screens/data/: catalog.json  catalog_books.json  home.json  (+14 more)
src/metrics/: event.rs  mod.rs
src/server/: error.rs  mod.rs  state.rs
src/server/handlers/: meta.rs  metrics.rs  mod.rs  screen.rs
(+42 files in other folders)
